# ForJob

C3_SimpleBashUtils-4-develop/src/cat/: Makefile  cat_test.sh  s21_cat.c  s21_cat.h
C3_SimpleBashUtils-4-develop/src/grep/: Makefile  s21_grep.c  s21_grep.h  s21_greptest1.txt  test_grep.sh
C5_s21_decimal-2-develop/src/: Makefile  s21_add.c  s21_big_normalize.c  s21_converter.c  s21_dec_to_big_dec.c  s21_decimal.h  s21_div.c  s21_get.c  s21_mul.c  s21_others.c  s21_shift.c  s21_sravnenie.c  s21_sub.c
C5_s21_decimal-2-develop/src/test/: test.h  test_main.c  test_s21_arif.c  test_s21_converter.c  test_s21_equals.c  test_s21_func.c
C6_s21_matrix-2-develop/src/: Makefile  s21_matrix.c  s21_matrix.h
C6_s21_matrix-2-develop/src/test/: test.c
C7_BrickGame_v1.0-1-develop/src/: KA.txt  Makefile  opisanie.txt
C7_BrickGame_v1.0-1-develop/src/brick_game/tetris/: tetris.c
C7_BrickGame_v1.0-1-develop/src/control/: control.c
C7_BrickGame_v1.0-1-develop/src/gui/cli/: cli.c
C7_BrickGame_v1.0-1-develop/src/inc/: cli.h  tetris.h
C7_BrickGame_v1.0-1-develop/src/test/: test.c
CPP2_s21_containers-1-develop/src/: Makefile
CPP2_s21_containers-1-develop/src/src/: Tree.h  s21_array.h  s21_containerplus.h  s21_containers.h  s21_list.h  s21_map.h  s21_queue.h  s21_set.h  s21_stack.h  s21_vector.h
CPP2_s21_containers-1-develop/src/tests/: test_array.cpp  test_list.cpp  test_map.cpp  test_queue.cpp  test_set.cpp  test_stack.cpp  test_vector.cpp
CPP3_BrickGame_v2.0-1-develop/src/: CMakeLists.txt  Makefile  opisanie.txt
CPP3_BrickGame_v2.0-1-develop/src/Game/: cli.cpp  desktop.cpp  main.cpp
CPP3_BrickGame_v2.0-1-develop/src/brick_game/: s21_brick_game.h
CPP3_BrickGame_v2.0-1-develop/src/brick_game/snake/: Snake.h  SnakeControle.h  SnakeView.h  a.out  main.cpp  s21_snake.cpp  s21_snake.h
CPP3_BrickGame_v2.0-1-develop/src/brick_game/tetris/: controler.h  main.cpp  model.h  s21_tetris.cpp  s21_tetris.h  view.h
CPP3_BrickGame_v2.0-1-develop/src/controle/: main.cpp
CPP3_BrickGame_v2.0-1-develop/src/gui/cli/: s21_cli.h
CPP3_BrickGame_v2.0-1-develop/src/gui/desktop/: s21_desktop.h
CPP3_BrickGame_v2.0-1-develop/src/test/: s21_test.cpp
CPP4_3DViewer_v2.0-1-develop/src/: CMakeLists.txt  makefile
CPP4_3DViewer_v2.0-1-develop/src/cmake/: utils.cmake
CPP4_3DViewer_v2.0-1-develop/src/controller/: Controller.cpp  Controller.h
CPP4_3DViewer_v2.0-1-develop/src/core/: Matrix.h  Object.h  Scene.h  Setting.h
CPP4_3DViewer_v2.0-1-develop/src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyWidget.cpp  MyWidget.h  main.cpp
CPP4_3DViewer_v2.0-1-develop/src/model/: Model.cpp  Model.h
CPP4_3DViewer_v2.0-1-develop/src/test/: CMakeLists.txt  test.cpp
D01_Linux-1-develop/src/: linux.md
